<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/settings_tab_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:foregroundGravity="fill">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/backup_restore_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/design_default_color_primary"
            android:gravity="center"
            android:paddingLeft="5dp"
            android:paddingTop="3dp"
            android:paddingRight="5dp"
            android:paddingBottom="4dp"
            android:text="@string/settings_tab_backup_loc"
            android:textColor="@color/design_default_color_on_primary"
            android:textSize="30sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="fill_horizontal"
            android:orientation="horizontal"
            android:paddingLeft="5dp"
            android:paddingTop="10dp"
            android:paddingRight="5dp"
            android:paddingBottom="10dp">

            <TextView
                android:id="@+id/settings_type_label"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:text="@string/settings_tab_backup_loc_type_label"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/settings_type_spinner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:entries="@array/location_types" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:orientation="horizontal"
            android:paddingLeft="5dp"
            android:paddingTop="10dp"
            android:paddingRight="5dp"
            android:paddingBottom="10dp">

            <TextView
                android:id="@+id/settings_location_label"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:text="@string/settings_tab_backup_loc_label"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/settings_location_textbox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints=""
                android:hint="@string/settings_tab_backup_loc_hint"
                android:inputType="textPersonName" />

        </LinearLayout>

        <TextView
            android:id="@+id/settings_label_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/design_default_color_primary"
            android:gravity="center"
            android:paddingLeft="5dp"
            android:paddingTop="3dp"
            android:paddingRight="5dp"
            android:paddingBottom="4dp"
            android:text="@string/settings_tab_backup_content"
            android:textColor="@color/design_default_color_on_primary"
            android:textSize="30sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/settings_texts_checkbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_tab_backup_content_texts"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/settings_photo_video_checkbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_tab_backup_content_photo_video"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/settings_contacts_checkbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_tab_backup_content_contacts"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/settings_apps_checkbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_tab_backup_content_apps"
                android:textSize="18sp" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/settings_save_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/design_default_color_primary"
            android:text="@string/settings_tab_save_button"
            android:textColor="@color/design_default_color_on_primary"
            android:textSize="18sp" />

    </LinearLayout>
</ScrollView>