<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/backup-tab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/backup_tab_title"
                tools:layout_conversion_absoluteHeight="0dp"
                tools:layout_conversion_absoluteWidth="0dp"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="0dp" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/restore-tab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/restore_tab_title"
                tools:layout_conversion_absoluteHeight="0dp"
                tools:layout_conversion_absoluteWidth="0dp"
                tools:layout_editor_absoluteX="137dp"
                tools:layout_editor_absoluteY="0dp" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/settings-tab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_tab_title"
                tools:layout_conversion_absoluteHeight="0dp"
                tools:layout_conversion_absoluteWidth="0dp"
                tools:layout_editor_absoluteX="274dp"
                tools:layout_editor_absoluteY="0dp" />

        </com.google.android.material.tabs.TabLayout>

        <ScrollView
            android:id="@+id/settings_tab_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="invisible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/settings_label_1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/design_default_color_primary"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="@string/settings_tab_backup_loc"
                    android:textColor="@color/design_default_color_on_primary"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="fill_horizontal"
                    android:orientation="horizontal"
                    android:paddingLeft="5dp"
                    android:paddingTop="10dp"
                    android:paddingRight="5dp"
                    android:paddingBottom="10dp">

                    <TextView
                        android:id="@+id/settings_type_label"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/settings_tab_backup_loc_type_label"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <Spinner
                        android:id="@+id/settings_type_spinner"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:entries="@array/location_types" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:gravity="start"
                    android:orientation="horizontal"
                    android:paddingLeft="5dp"
                    android:paddingTop="10dp"
                    android:paddingRight="5dp"
                    android:paddingBottom="10dp">

                    <TextView
                        android:id="@+id/settings_location_label"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/settings_tab_backup_loc_label"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints=""
                        android:ems="10"
                        android:hint="@string/settings_tab_backup_loc_hint"
                        android:inputType="textPersonName" />

                </LinearLayout>

                <TextView
                    android:id="@+id/settings_label_2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/design_default_color_primary"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="@string/settings_tab_backup_content"
                    android:textColor="@color/design_default_color_on_primary"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <CheckBox
                        android:id="@+id/checkBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/settings_tab_backup_content_texts"
                        android:textSize="18sp" />

                    <CheckBox
                        android:id="@+id/checkBox2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/settings_tab_backup_content_photo_video"
                        android:textSize="18sp" />

                    <CheckBox
                        android:id="@+id/checkBox3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/settings_tab_backup_content_contacts"
                        android:textSize="18sp" />

                    <CheckBox
                        android:id="@+id/checkBox4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/settings_tab_backup_content_apps"
                        android:textSize="18sp" />

                </LinearLayout>

            </LinearLayout>
        </ScrollView>

        <ScrollView
            android:id="@+id/backup_tab_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible" />

        <ScrollView
            android:id="@+id/restore_tab_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="invisible"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>